<resources>
    <string name="app_name">coffeeDelight</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="wave_bg">wave background</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="already_user">Already a user? Login</string>
    <string name="new_user">New user? Register</string>
    <string name="shop_now">Shop Now</string>
    <string name="welcome_note">Welcome to Coffee Delight!</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="checkout">Checkout</string>
    <string name="fill_it_your_details">Fill it your details</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="order_again">Order Again</string>
    <string name="thank_you">Thank You!</string>
    <string name="ordered_successfully">Ordered Successfully!.</string>
    <string name="place_order">Place Order</string>
    <string name="products">Products</string>
    <string name="get_started">Get Started</string>
    <string name="caption">Where Quality meets Passion</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="details">Details</string>
    <string name="one">1</string>
    <string name="productimage">productImage</string>
    <string name="bill_0_00">Bill: $0.00</string>
    <string name="tax_13_0_00">Tax (13%): $0.00</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="_0_00">$0.00</string>
    <string name="remove">Remove</string>
    <string name="cart">Cart</string>
    <string name="back">Back</string>
</resources>