<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@color/bg_color" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:contentDescription="@string/wave_bg"
        android:rotation="180"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/wave" />

    <ImageView
        android:id="@+id/signupLogoImage"
        android:layout_width="225dp"
        android:layout_height="177dp"
        android:layout_gravity="center"
        android:layout_marginTop="-400dp"
        android:src="@drawable/logo"
        android:layout_marginBottom="40dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signupCardView"
        android:layout_width="334dp"
        android:layout_height="380sp"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/signup"
                android:textColor="@color/bg_color"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/textEmailSignup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/account"
                android:drawablePadding="10dp"
                android:drawableTint="@color/bg_color"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/textPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/key_password"
                android:drawablePadding="10dp"
                android:drawableTint="@color/bg_color"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/bg_color"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                app:cornerRadius="8dp" />

            <TextView
                android:id="@+id/linkLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/already_user"
                android:textAlignment="center"
                android:textColor="@color/links"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
